--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "styled": "^1.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
